Refactor getQuizList